# kisanseva-ai-api

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  GEMINI.md  README.md  RESEARCH.md  pyproject.toml
app/: main.py
app/api/rest_routes/: admin.py  auth.py  chat.py  crop_recommendation.py  cultivating_crop.py  farm_profile.py  (+6 more)
app/collections/: ai_workflow.py  chat_session.py  crop_images.py  crop_recommendation.py  crop_recommendation_component.py  cultivating_crop.py  cultivation_calendar.py  farm_profile.py  investment_breakdown.py  pesticide_recommendation.py  pesticide_recommendation_component.py  soil_health_recommendations.py  user.py
app/core/: azure_cosmos_config.py  config.py  genai_client.py  langchain_message_adapter.py  model_validator.py  mongodb.py  security.py
app/models/: ai_workflow.py  chat_session.py  crop_image.py  crop_recommendation.py  cultivating_crop.py  cultivation_calendar.py  farm_profile.py  farm_survey_agent_response.py  investment_breakdown.py  pesticide_recommendation.py  soil_health_recommendations.py  user.py  weather.py
app/prompts/: crop_recommendation_system_prompt.py  farm_survey_agent_system_prompt.py  general_chat_system_prompt.py  pesticide_recommendation_system_prompt.py  selected_crop_detailer_system_prompt.py
app/services/: ai_workflow_runtime.py  azure_blob.py  chat.py  crop_recommendation_service.py  farm_survey_service.py  files.py  general_chat.py  pesticide_recommendation_service.py  soilgrids_service.py  weather_service.py
app/templates/: admin_login.html  crop_images.html  home.html  theme.css
(+4 files in other folders)
